src/main/java/com/example/demo/exception/error/NotFoundException.java
package com.example.demo.exception.error;

public class NotFoundException extends  RuntimeException{
    public NotFoundException(){
        super("Could not find this object");
    }
}
